--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivityO">
 
+    <Button
+        android:id="@+id/buttonLoginO"
+        android:layout_width="368dp"
+        android:layout_height="50dp"
+        android:text="登入"
+        android:textSize="20sp"
+        app:backgroundTint="#8BC34A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813" />
+
     <TextView
         android:id="@+id/textView187"
         android:layout_width="408dp"
@@ -222,6 +236,7 @@
         android:id="@+id/buttonEditPetDataO"
         android:layout_width="346dp"
         android:layout_height="42dp"
+        android:onClick="OPnClick"
         android:text="編輯資料"
         app:backgroundTint="#BFBDBD"
         app:layout_constraintBottom_toBottomOf="parent"
