--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
@@ -187,6 +187,7 @@
         android:layout_width="300dp"
         android:layout_height="20dp"
         android:text="#標籤(紫色優)"
+        android:textColor="#9C27B0"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.841"
