--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageButtonBackD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="BackonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
