--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
@@ -344,6 +344,7 @@
         android:id="@+id/imageButtonBackF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="BackonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
