--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i2.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i2.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityI1">
+    tools:context=".MainActivityI2">
 
     <TextView
-        android:id="@+id/textView98"
+        android:id="@+id/textView11"
         android:layout_width="408dp"
         android:layout_height="68dp"
         android:background="#DFDFDF"
@@ -19,7 +20,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageJI1"
+        android:id="@+id/imageButtonToPageJI2"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IJonClick"
@@ -33,7 +34,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageOI1"
+        android:id="@+id/imageButtonToPageOI2"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IOonClick"
@@ -47,7 +48,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageHI1"
+        android:id="@+id/imageButtonToPageHI2"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IHonClick"
@@ -61,7 +62,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageAI1"
+        android:id="@+id/imageButtonToPageAI4"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IAonClick"
@@ -75,7 +76,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageBI1"
+        android:id="@+id/imageButtonToPageBI2"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IBonClick"
@@ -89,7 +90,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/textViewToPageBI1"
+        android:id="@+id/textViewToPageBI2"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:onClick="IBonClick"
@@ -102,7 +103,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textViewToPageJI1"
+        android:id="@+id/textViewToPageJI2"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:onClick="IJonClick"
@@ -115,7 +116,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageOI1"
+        android:id="@+id/textViewToPageOI2"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IOonClick"
@@ -128,7 +129,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageAI1"
+        android:id="@+id/textViewToPageAI2"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IAonClick"
@@ -141,7 +142,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageHI1"
+        android:id="@+id/textViewToPageHI2"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IHonClick"
@@ -153,7 +154,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <ImageButton
-        android:id="@+id/imageButtonADI"
+        android:id="@+id/imageButtonADI5"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -165,7 +166,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
-        android:id="@+id/textView92"
+        android:id="@+id/textView12"
         android:layout_width="360dp"
         android:layout_height="382dp"
         android:background="#D5D5D5"
@@ -177,7 +178,7 @@
         app:layout_constraintVertical_bias="0.24" />
 
     <ImageButton
-        android:id="@+id/imageButtonBackI1"
+        android:id="@+id/imageButtonBackI2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="BackonClick"
@@ -190,10 +191,10 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <TextView
-        android:id="@+id/textViewTitleI1"
+        android:id="@+id/textViewTitleI2"
         android:layout_width="54dp"
         android:layout_height="34dp"
-        android:text="火葬"
+        android:text="樹葬"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +206,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/textViewTextI1"
+        android:id="@+id/textViewTextI2"
         android:layout_width="324dp"
         android:layout_height="353dp"
         android:text="內容描述"
