--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i3.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i3.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityI1">
+    tools:context=".MainActivityI3">
 
     <TextView
-        android:id="@+id/textView98"
+        android:id="@+id/textView4"
         android:layout_width="408dp"
         android:layout_height="68dp"
         android:background="#DFDFDF"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageJI1"
+        android:id="@+id/imageButtonToPageJI3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IJonClick"
@@ -33,7 +33,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageOI1"
+        android:id="@+id/imageButtonToPageOI3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IOonClick"
@@ -47,7 +47,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageHI1"
+        android:id="@+id/imageButtonToPageHI3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IHonClick"
@@ -61,7 +61,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageAI1"
+        android:id="@+id/imageButtonToPageAI3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IAonClick"
@@ -75,7 +75,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButtonToPageBI1"
+        android:id="@+id/imageButtonToPageBI3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:onClick="IBonClick"
@@ -89,7 +89,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/textViewToPageBI1"
+        android:id="@+id/textViewToPageBI3"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:onClick="IBonClick"
@@ -102,7 +102,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textViewToPageJI1"
+        android:id="@+id/textViewToPageJI3"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:onClick="IJonClick"
@@ -115,7 +115,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageOI1"
+        android:id="@+id/textViewToPageOI3"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IOonClick"
@@ -128,7 +128,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageAI1"
+        android:id="@+id/textViewToPageAI3"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IAonClick"
@@ -141,7 +141,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textViewToPageHI1"
+        android:id="@+id/textViewToPageHI3"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:onClick="IHonClick"
@@ -153,7 +153,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <ImageButton
-        android:id="@+id/imageButtonADI"
+        android:id="@+id/imageButtonADI2"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -165,7 +165,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
-        android:id="@+id/textView92"
+        android:id="@+id/textView5"
         android:layout_width="360dp"
         android:layout_height="382dp"
         android:background="#D5D5D5"
@@ -177,7 +177,7 @@
         app:layout_constraintVertical_bias="0.24" />
 
     <ImageButton
-        android:id="@+id/imageButtonBackI1"
+        android:id="@+id/imageButtonBackI3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="BackonClick"
@@ -190,10 +190,10 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <TextView
-        android:id="@+id/textViewTitleI1"
+        android:id="@+id/textViewTitleI3"
         android:layout_width="54dp"
         android:layout_height="34dp"
-        android:text="火葬"
+        android:text="海葬"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +205,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/textViewTextI1"
+        android:id="@+id/textViewTextI3"
         android:layout_width="324dp"
         android:layout_height="353dp"
         android:text="內容描述"
