--- a/111502_SystemCode(18)/app/src/main/res/values/arrays.xml
+++ b/111502_SystemCode(18)/app/src/main/res/values/arrays.xml
@@ -16,8 +16,24 @@
         <item>地區不限</item>
         <item>台北市</item>
         <item>新北市</item>
+        <item>基隆縣</item>
         <item>桃園市</item>
         <item>新竹縣</item>
+        <item>苗栗縣</item>
+        <item>台中市</item>
+        <item>彰化縣</item>
+        <item>雲林縣</item>
+        <item>南投縣</item>
+        <item>嘉義縣</item>
+        <item>台南市</item>
+        <item>高雄市</item>
+        <item>屏東縣</item>
+        <item>宜蘭縣</item>
+        <item>花蓮縣</item>
+        <item>台東縣</item>
+        <item>連江縣(媽祖)</item>
+        <item>金門縣</item>
+        <item>澎湖縣</item>
     </string-array>
     <string-array name="spinnerPetGenderValue">
         <item>公</item>
