殯葬服務查詢功能更新

--- a/111502_SystemCode(18)/app/src/main/res/values/arrays.xml
+++ b/111502_SystemCode(18)/app/src/main/res/values/arrays.xml
@@ -18,6 +18,7 @@
         <item>新北市</item>
         <item>基隆縣</item>
         <item>桃園市</item>
+        <item>新竹市</item>
         <item>新竹縣</item>
         <item>苗栗縣</item>
         <item>台中市</item>
