保健須知功能更新

--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
@@ -168,6 +168,7 @@
         android:id="@+id/buttonVaccineNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="VaccineNoticeonClick"
         android:text="疫苗須知"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -182,6 +183,7 @@
         android:id="@+id/buttonWaferNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="WaferNoticeonClick"
         android:text="晶片須知"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -196,6 +198,7 @@
         android:id="@+id/buttonSummerNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="SummerNoticeonClick"
         android:text="夏日須知"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -210,6 +213,7 @@
         android:id="@+id/buttonHealthNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="HealthNoticeonClick"
         android:text="健康檢查"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -224,6 +228,7 @@
         android:id="@+id/buttonAutumnWinterNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="AutumnWinterNoticeonClick"
         android:text="秋冬須知"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -238,6 +243,7 @@
         android:id="@+id/buttonPetDentistryG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="PetDentistryonClick"
         android:text="寵物牙科"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -252,6 +258,7 @@
         android:id="@+id/buttonInsectPreventionNoticeG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="PreventionNoticeonClick"
         android:text="防蟲須知"
         android:textSize="10sp"
         app:backgroundTint="#727273"
@@ -266,6 +273,7 @@
         android:id="@+id/buttonWeightControlG"
         android:layout_width="80dp"
         android:layout_height="35dp"
+        android:onClick="WeightControlonClick"
         android:text="體重控制"
         android:textSize="10sp"
         app:backgroundTint="#727273"
